# abs-organize

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: RELEASE.md
src/abs_organize/: __init__.py  batch.py  cli.py  config.py  covers.py  discovery.py  heuristics.py  metadata.py  naming.py  opf.py  organize.py
tests/: conftest.py  test_cli_batch.py  test_cli_config.py  test_cli_json.py  test_config.py  test_discovery.py  test_heuristics.py  test_metadata.py  test_metadata_gap_fill.py  test_metadata_guess.py  test_metadata_majority.py  test_naming.py  test_narrator_normalize.py  test_opf.py  test_organize_integration.py  test_title_narrator_split.py
tests/fixtures/: silent.m4b
