[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "abs-organize"
version = "0.1.0"
description = "Organize downloaded audiobooks into Audiobookshelf library layout"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mutagen>=1.47",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
abs-organize = "abs_organize.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
